--- a/home.html
+++ b/home.html
@@ -89,7 +89,54 @@
         </a>
     </div>
 </section>
+<div class="album py-5 bg-light">
+<div class="container">
+    <div class="row">
+        <h1>&nbsp; Latest episodes<br><br></h1>
+      </div>
+    </div>
+   
+    <!-- Custom styles for this template -->
+    <link href="album.css" rel="stylesheet">
+<main role="main">
 
+  <div class="album py-5 bg-light">
+    <div class="container">
+
+      <div class="row">
+         <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+            <img src="file:///C:/Users/lenovo/AppData/Local/Mobirise.com/Mobirise/projects/project-2020-04-29_062610/assets/images/s3e22-700x393.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text">Cat Blanc<br><br></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+            <img src="file:///C:/Users/lenovo/AppData/Local/Mobirise.com/Mobirise/projects/project-2020-04-29_062610/assets/images/s3e23-700x382.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text">Heart Hunter (The Battle of The Miraculous - Part 1)<br></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+            <img src="assets/images/s1e20-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text">Heart Hunter (The Battle of The Miraculous - Part 1)</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S1E05 |22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div></div></div></div></main></div>
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
