--- a/home.html
+++ b/home.html
@@ -106,33 +106,33 @@
       <div class="row">
          <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-            <img src="file:///C:/Users/lenovo/AppData/Local/Mobirise.com/Mobirise/projects/project-2020-04-29_062610/assets/images/s3e22-700x393.jpg" class="img-fluid" alt="Responsive image" title>
+            <img src="assets/images/s3e23-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text">Cat Blanc<br><br></p>
+              <p class="card-text">Felix<br><br></p>
               <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">22 mins</small>
+                <small class="text-muted">S1E23 |22 mins</small>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-            <img src="file:///C:/Users/lenovo/AppData/Local/Mobirise.com/Mobirise/projects/project-2020-04-29_062610/assets/images/s3e23-700x382.jpg" class="img-fluid" alt="Responsive image" title>
+            <img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
               <p class="card-text">Heart Hunter (The Battle of The Miraculous - Part 1)<br></p>
               <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">22 mins</small>
+                <small class="text-muted">S3E25 |22 mins</small>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-            <img src="assets/images/s1e20-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <img src="assets/images/s3e26-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text">Heart Hunter (The Battle of The Miraculous - Part 1)</p>
+              <p class="card-text">Miracle Queen (The Battle of The Miraculous - Part 2)</p>
               <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">S1E05 |22 mins</small>
+                <small class="text-muted">S3E26 |22 mins</small>
               </div>
             </div>
           </div>
