--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-            <img src="assets/images/s3e26-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <a href="miraclequeen.eng.html"><img src="assets/images/s3e26-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text">Miracle Queen (The Battle of The Miraculous - Part 2)</p>
+              <p class="card-text"><a href="miraclequeen.eng.html">Miracle Queen (The Battle of The Miraculous - Part 2)</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S3E26 |22 mins</small>
               </div>
