--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
       <div class="row">
          <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-            <img src="assets/images/s3e23-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <a href="Felix.eng.html"><img src="assets/images/s3e23-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text">Felix<br><br></p>
+              <p class="card-text"><a href="felix.eng.html">Felix<br><br></a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S1E23 |22 mins</small>
               </div>
@@ -186,9 +186,9 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-            <img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <a href="hearthunter.eng.html"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text">Heart Hunter (The Battle of The Miraculous - Part 1)<br></p>
+              <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)<br></a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S3E25 |22 mins</small>
               </div>
