--- a/episodes.eng.html
+++ b/episodes.eng.html
@@ -401,9 +401,9 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-            <a href="theorigins.eng.html"><img src="assets/images/s1e26-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <a href="theorigins2.eng.html"><img src="assets/images/s1e26-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
-              <p class="card-text"><a href="theorigins.eng.html">The Origins-Part 2</a></p>
+              <p class="card-text"><a href="theorigins2.eng.html">The Origins-Part 2</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">22 mins</small>
               </div>
