--- a/episodes.fr.html
+++ b/episodes.fr.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Full episodes/eng</title>
+  <title>Full episodes/fr</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -89,7 +89,7 @@
            </a>     </p>
     </div><ul class="nav nav-tabs cid-rXAJ5IF6V2" id="custom-html-3h" role="tablist" data-rv-view="359">
   <li class="nav-item">
-    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Season 1</a>
+    <a class="nav-link active" id="season1-tab" data-toggle="tab" href="#season1" role="tab" aria-controls="season1" aria-selected="true">Season 1</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Season 2</a>
@@ -98,7 +98,7 @@
     <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Season 3</a>
   </li>
 </ul><div class="tab-content cid-rXAJ5IF6V2" id="custom-html-3h" data-rv-view="359">
-  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+  <div class="tab-pane fade show active" id="season1" role="tabpanel" aria-labelledby="season1-tab">
   <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
