--- a/test.html
+++ b/test.html
@@ -95,7 +95,7 @@
 <script id="rendered-js">
 <video class="player" style="--plyr-color-main: ##4a5464;">
     ...
-</vieo>
+</video>
           // Change the second argument to your options:
 // https://github.com/sampotts/plyr/#options
 const player = new Plyr('video', { captions: { active: true } });
