--- a/index.html
+++ b/index.html
@@ -78,7 +78,12 @@
 <section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="cid-rYPFgDDGja mbr-fullscreen mbr-parallax-background" id="header2-5p">
 
     
-
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <strong>PLEASE BE SURE TO CONTACT ME IF ANY ALERT ADS SHOWS UP!</strong> 
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(35, 35, 35);"></div>
 
     <div class="container align-center">
