--- a/test22.html
+++ b/test22.html
@@ -200,10 +200,10 @@
         </div>
         <div class="card mb-3" style="max-width: 540px;">
   <div class="row no-gutters">
-    <div class="col-md-4">
+    <div class="col-md-4 shadow-sm mb-4 bg-white rounded-0">
       <img src="..." class="card-img" alt="...">
     </div>
-    <div class="col-md-8">
+    <div class="col-md-8 shadow-sm mb-4 bg-white rounded-0">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
