--- a/test22.html
+++ b/test22.html
@@ -184,9 +184,6 @@
             <div class="card-body">
               <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)<br></a></p>
               <div class="d-flex justify-content-between align-items-center">
-              </div>
-            </div>
-          </div>
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
@@ -194,14 +191,11 @@
             <div class="card-body">
               <p class="card-text"><a href="miraclequeen.eng.html">Miracle Queen (The Battle of The Miraculous - Part 2)</a></p>
               <div class="d-flex justify-content-between align-items-center">
-              </div>
-            </div>
-          </div>
         </div>
         <div class="card mb-3" style="max-width: 540px;">
   <div class="row no-gutters">
     <div class="col-md-4 shadow-sm mb-4 bg-white rounded-0">
-      <img src="..." class="card-img" alt="...">
+      <img src="assets/images/s3e26-700x394.jpg" class="card-img" alt="...">
     </div>
     <div class="col-md-8 shadow-sm mb-4 bg-white rounded-0">
       <div class="card-body">
