--- a/test22.html
+++ b/test22.html
@@ -169,44 +169,35 @@
 
       <div class="row">
          <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
             <a href="Felix.eng.html"><img src="assets/images/s3e23-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
               <p class="card-text"><a href="felix.eng.html">Felix<br><br></a></p>
               <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S3E23 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+            <a href="hearthunter.eng.html"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)<br></a>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="hearthunter.eng.html"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
-            <div class="card-body">
-              <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)<br></a></p>
-              <div class="d-flex justify-content-between align-items-center">
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
             <a href="miraclequeen.eng.html"><img src="assets/images/s3e26-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text"><a href="miraclequeen.eng.html">Miracle Queen (The Battle of The Miraculous - Part 2)</a></p>
+              <p class="card-text"><a href="miraclequeen.eng.html">Miracle Queen (The Battle of The Miraculous - Part 2)</a>
               <div class="d-flex justify-content-between align-items-center">
-        </div>
-        <div class="card mb-3" style="max-width: 540px;">
-  <div class="row no-gutters">
-    <div class="col-md-4 shadow-sm mb-4 bg-white rounded-0">
-      <img src="assets/images/s3e26-700x394.jpg" class="card-img" alt="...">
-    </div>
-    <div class="col-md-8 shadow-sm mb-4 bg-white rounded-0">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-  </div>
-</div>
-        </div></div></div></main></div>
+              </div>
+            </div>
+          </div>
+        </div></div></div></div></main></div>
     <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
