--- a/test22.html
+++ b/test22.html
@@ -183,7 +183,7 @@
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
             <a href="hearthunter.eng.html"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)<br></a>
+              <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)<br></a></p>
               </div>
             </div>
           </div>
@@ -192,7 +192,7 @@
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
             <a href="miraclequeen.eng.html"><img src="assets/images/s3e26-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text"><a href="miraclequeen.eng.html">Miracle Queen (The Battle of The Miraculous - Part 2)</a>
+              <p class="card-text"><a href="miraclequeen.eng.html">Miracle Queen (The Battle of The Miraculous - Part 2)</a></p>
               <div class="d-flex justify-content-between align-items-center">
               </div>
             </div>
