--- a/test22.html
+++ b/test22.html
@@ -172,18 +172,18 @@
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
             <a href="Felix.eng.html"><img src="assets/images/s3e23-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text"><a href="felix.eng.html">Felix<br><br></a></p>
+              <p class="card-text"><a href="felix.eng.html">Felix</a></p>
               <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">S3E23 | 22 mins</small>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+          <div class="card mb-4 shadow-sm mb-5 bg-white rounded-0">
             <a href="hearthunter.eng.html"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)<br></a></p>
+              <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)</a></p>
+              <div class="d-flex justify-content-between align-items-center">
               </div>
             </div>
           </div>
