--- a/test22.html
+++ b/test22.html
@@ -197,10 +197,10 @@
               </div>
             </div>
           </div>
-            <div class="card  mb-4 shadow-sm mb-4 bg-white rounded-0" style="width: 18rem;">
+            <div class="card  mb-4 shadow-sm mb-4 bg-white rounded-0">
   <img src="assets/images/s3e26-700x394.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">Miracle queen</p>
   </div>
 </div>
         </div></div></div></div></main></div>
