--- a/test22.html
+++ b/test22.html
@@ -168,29 +168,28 @@
     <div class="container">
 
       <div class="row">
-            <div class="card  mb-4 shadow-sm mb-4 bg-white rounded-0">
-  <img src="assets/images/s3e26-700x394.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-text">Miracle queen</p>
-  <div class="d-flex justify-content-between align-items-center">
-    </div>       
+          <div class="card-deck">
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+    <img src="assets/images/s3e26-700x394.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Miracle Queen</p>
     </div>
-</div>
-                        <div class="card  mb-4 shadow-sm mb-4 bg-white rounded-0">
-  <img src="assets/images/s3e26-700x394.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-text">Miracle queen</p>
-  <div class="d-flex justify-content-between align-items-center">
-    </div>       
+  </div>
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+    <img src="assets/images/s3e26-700x394.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Miracle Queen</p>
     </div>
-</div>
-                        <div class="card  mb-4 shadow-sm mb-4 bg-white rounded-0">
-  <img src="assets/images/s3e26-700x394.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-text">Miracle queen</p>
-  <div class="d-flex justify-content-between align-items-center">
-    </div>       
+  </div>
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+    <img src="assets/images/s3e26-700x394.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Miracle Queen</p>
     </div>
+  </div>
 </div>
         </div></div></div></div></main></div>
     <head>
