--- a/watch.html
+++ b/watch.html
@@ -66,7 +66,7 @@
    <hr>
   <p class="epnumber">Loading :)</p>
 <script>
-  localStorage["lang"]="en,es,fr"
+  localStorage["myurls"]="en,es,fr"
   localStorage["estitleenc"]="disabled";
   localStorage["activethumbs"]="true"
   localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
@@ -80,11 +80,7 @@
     <div class=".container-fluid">
         <div class="media-container-fluid title">
             <div class="p-3 my-3 bg-dark text-white">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4 downloadbtn" href="
-                   <script>
-  localStorage["lang"]="en,es,fr"
-                   </script>
-                   ">Download</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4 downloadbtn" href="https://vk.com/doc432326012_548837472">Download</a></div>
 </div></div></div></section>
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
 <div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
