--- a/watch.html
+++ b/watch.html
@@ -62,11 +62,9 @@
     </nav>
    </section>
 <section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXBxxTeefe" id="custom-html-3e" data-rv-view="467">
-  <h1 class="eptitle"><br><br><br>Loading...</h1>
-   <hr>
-  <p class="epnumber">Loading :)</p>
+  <h1 class="eptitle"><br><br><br><br>Loading...</h1>
     <script>
-  localStorage["myurls"]="en,fr,it"
+  localStorage["lang"]="en,fr,it"
   localStorage["estitleenc"]="disabled";
   localStorage["activethumbs"]="true"
   localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
