--- a/hometest.html
+++ b/hometest.html
@@ -301,13 +301,17 @@ function showSlides(n) {
 </script>
 
 </body>
+  </div>
+  </div>
+</div>
+</div>
 <div class="album py-5 bg-light">
+   <hr style="width:85%;height:3px" color="grey"><br>
 <div class="container">
     <div class="row">
-        <h1>&nbsp; Latest episodes<br><br></h1>
+        <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
       </div>
-    </div>
-   
+  </div>
     <!-- Custom styles for this template -->
     <link href="album.css" rel="stylesheet">
 <main role="main">
@@ -348,6 +352,34 @@ function showSlides(n) {
               </div>
             </div>
           </div>
+	<head>
+<style>
+/* unvisited link */
+a:link {
+  color: grey;
+}
+
+/* visited link */
+a:visited {
+  color: black;
+}
+
+/* mouse over link */
+a:hover {
+  color: grey;
+}
+
+/* selected link */
+a:active {
+  color: grey;
+} 
+</style>
+</head>
+<body>
+
+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://itsladybug.cf/page80.html">SHOW ALL</a>
+
+</body>	  
         </div></div></div></div></main></div>
     <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
