--- a/hometest.html
+++ b/hometest.html
@@ -155,7 +155,7 @@ body {font-family: rubik; margin:0}
 <div class="row">
   <div class="column">
   <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
-	  <figcaption class="figure-caption">A caption </figcaption>
+	<p class="font-weight-bold">the chase</p>
   </div>
   <div class="column">
     <img src="https://i.ytimg.com/vi/4ODgspKhg-I/maxresdefault.jpg" alt="Forest" style="width:100%">
