--- a/home.html
+++ b/home.html
@@ -136,7 +136,7 @@
     <img src="https://raw.githubusercontent.com/itsmiraculous/itsmiraculous.github.io/master/img/XVM10e1baa0-16b0-11ea-a200-f88b95c92545.jpg" class="w-100" alt="...">
   </div>
   <div class="col-md-6 position-static p-4 pl-md-0">
-    <h5 class="mt-0">NEWSFLASH AND UPCOMING EPISODES</h5>
+	  <h5 class="mt-0">NEWSFLASH AND UPCOMING EPISODES</h5></br>
 
 <button type="button" class="collapsible">Open Collapsible</button>
 <div class="content">
