--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </section>
 	<div class="album py-5 bg-light">
 		<div class="alert alert-warning alert-dismissible fade show" role="alert">
-		<strong>Some Episodes may not work, the problem will be fixed soon!</strong>
+		<strong>The second episode of season 4 is now available with english subtitles!</strong>
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
