--- a/fullepisodes.html
+++ b/fullepisodes.html
@@ -1078,9 +1078,9 @@
         </div> 
 		      <div class="col-md-4">
           <div class="card mb-4 shadow-sm bg-white rounded">
-            <a href="https://itsladybug.cf/watch.html?episode=4_01&language=en"><img src="/assets/images/402.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <a href="https://itsladybug.cf/402sub"><img src="/assets/images/402.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_02&language=en">Lie</a></p>
+              <p class="card-text"><a href="https://itsladybug.cf/402sub">Lie</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S4E02 | 22 mins</small>
               </div>
