--- a/402subb.html
+++ b/402subb.html
@@ -94,7 +94,7 @@
       });
   </script>
  <video id="player" playsinline controls data-poster="/path/to/poster.jpg">
-  <source src="https://vk.com/doc-120991336_593576673" type="video/mp4" />
+  <source src="https://vk.com/doc593404724_593211408?hash=821a7922ee1a5dfc97&dl=f7b377d581d04ab4ea" type="video/mp4" />
 
   <!-- Captions are optional -->
   <track kind="captions" label="English captions" src="https://itsladybug.cf/402.vtt" srclang="en" default />
