--- a/402sub.html
+++ b/402sub.html
@@ -96,6 +96,13 @@
 @miraculorime
 @creator_freak  
 	</p>
+
+	<div class="more_options" style="margin-bottom:23px;margin-left:10px;margin-right:10px;">
+         <p style="margin-top: 10px;margin-bottom: 0px;">SELECT YOUR SERVER: *Note: if the first server didn't work with english subtitles, click on the second one* <br>
+
+<a title='ANGLAIS' href='/402sub' style='color:#FFFFFF;'>SERVER 1</a>
+         <a title='FRANÇAIS' href='/402subb' style='color:#FFFFFF;'>SERVER 2</a>     </p>
+    </div>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
   <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
  <script>
