--- a/406sub.html
+++ b/406sub.html
@@ -111,7 +111,7 @@
       });
   </script>
  <video id="player" playsinline controls data-poster="/path/to/poster.jpg">
-  <source src="https://vk.com/doc-120991336_593576673" type="video/mp4" />
+  <source src="https://archive.org/download/furiousfu/IMG_1786.mp4" type="video/mp4" />
 
   <!-- Captions are optional -->
   <track kind="captions" label="English captions" src="https://itsladybug.cf/406.vtt" srclang="en" default />
