--- a/shanghaisubs.html
+++ b/shanghaisubs.html
@@ -77,7 +77,20 @@
 	
 <section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAtDb3XLd" id="custom-html-1w" data-rv-view="281">
   <h1><br><br>Miraculous World Shanghai : The Legend of Ladydragon</h1>
-   <hr>
+   <hr>English Subtitles thanks to:
+	@victoria_frdl
+        @bvginett
+	@nessiepv
+	@creator_freak
+	@papillon_gabrielagreste
+	@clelia.brz
+	@cloquellicot
+	@zarahevabovic
+	@x._fluff_.x
+	@thedonutxd
+	@mayasagrr
+        @chat_blog009
+	@ryujinaries
   <p></p>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
   <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
