--- a/shanghaisubs.html
+++ b/shanghaisubs.html
@@ -126,7 +126,7 @@ window.player = player;
     <div class=".container-fluid">
         <div class="media-container-fluid title">
             <div class="p-3 my-3 bg-dark text-white">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://drive.google.com/file/d/1YqteImhmLRaeoTBOin3Rnbs5ACBMrnZ9/view">Second link</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">Download not available</a></div>
 </div></div></div></section>
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
 <div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
